<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/focus"
            android:textColor="@color/red" />

        <CheckBox
            android:id="@+id/focus_str"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/focus_str" />

        <CheckBox
            android:id="@+id/focus_int"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/focus_int" />

        <CheckBox
            android:id="@+id/focus_agi"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/focus_agi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_gravity="left" >

        <TextView
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/attack"
            android:textColor="@color/red" />

        <CheckBox
            android:id="@+id/attack_melee"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/attack_melee" />

        <CheckBox
            android:id="@+id/attack_ranged"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/attack_rng" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ease"
            android:textColor="@color/red" />

        <CheckBox
            android:id="@+id/ease_easy"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <CheckBox
            android:id="@+id/ease_med"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/medium" />

        <CheckBox
            android:id="@+id/ease_hard"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hard" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:layout_weight="0.8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/role"
            android:textColor="@color/red" />

        <CheckBox
            android:id="@+id/role_support"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/support" />

        <CheckBox
            android:id="@+id/role_carry"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/carry" />

        <CheckBox
            android:id="@+id/role_ganker"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ganker" />
    </LinearLayout>

    <FrameLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" >
        
	    <EditText
	        android:id="@+id/search"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/search"
	        android:singleLine="true"
	        android:textSize="28sp"
	        android:imeOptions="actionDone"
	        android:paddingRight="40dp"
	        android:textCursorDrawable="@color/red" />
	    
	    <Button
    	    android:id="@+id/clear_search"      
	        android:layout_width="28sp"
	        android:layout_height="28sp"
	        android:layout_marginRight="10dp"
	        android:layout_marginTop="1dp"
	        android:layout_gravity="right|center_vertical"
	        android:background="@drawable/ic_clear" />
    </FrameLayout>

</LinearLayout>